Update Page Changes

--- a/crudexample/employee/templates/edit.html
+++ b/crudexample/employee/templates/edit.html
@@ -36,7 +36,7 @@
     <div class="form-group row">  
         <label class="col-sm-2 col-form-label">Insurance Type:</label>  
         <div class="col-sm-4">  
-            <input type="" name="eemail" id="id_eemail" required maxlength="254" value="{{ employee.eemail }}" />  
+            <input type="text" name="eemail" id="id_eemail" required maxlength="254" value="{{ employee.eemail }}" />  
         </div>  
     </div>  
 
